--- a/code/python/small_data_analysis/calculate_stacking.ipynb
+++ b/code/python/small_data_analysis/calculate_stacking.ipynb
@@ -16,7 +16,6 @@
     "from sklearn.linear_model import Lars, ElasticNet, Perceptron, SGDRegressor\n",
     "from sklearn.ensemble import AdaBoostRegressor, GradientBoostingRegressor, RandomForestRegressor\n",
     "\n",
-    "\n",
     "import sys\n",
     "sys.path.append(\"../utils/\")\n",
     "sys.path.append(\"../calculating_predictions\")\n",
@@ -26,7 +25,6 @@
     "from run_evaluation import *\n",
     "\n",
     "FEATURES_NUMBER = 79\n",
-    "\n",
     "\n",
     "%reload_ext autoreload\n",
     "%autoreload 2"
@@ -330,6 +328,82 @@
    ],
    "source": [
     "metrics = [get_stacking_metric(i) for i in range(16)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.5958344449019258,\n",
+       " 0.6145928913246959,\n",
+       " 0.618692261496208,\n",
+       " 0.6243788805427603,\n",
+       " 0.6185580187941483,\n",
+       " 0.621221794320235,\n",
+       " 0.6447465507372773,\n",
+       " 0.6276703039406661,\n",
+       " 0.633696806285413,\n",
+       " 0.6288142013284951,\n",
+       " 0.6138080119236777,\n",
+       " 0.5834505321330907,\n",
+       " 0.623941933998769,\n",
+       " 0.6221379836419182,\n",
+       " 0.5893872228663154,\n",
+       " 0.6085765372836692]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.load(\"predictions/train_2_test_6.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.61812625, 0.61846679, 0.61890057, ..., 0.61478642, 0.61478642,\n",
+       "        0.61478642],\n",
+       "       [0.34391105, 0.34409557, 0.34577321, ..., 0.34736335, 0.34736335,\n",
+       "        0.34736335],\n",
+       "       [0.66238071, 0.66272125, 0.66203065, ..., 0.66103397, 0.66103397,\n",
+       "        0.66103397],\n",
+       "       ...,\n",
+       "       [0.37748273, 0.37782327, 0.37825705, ..., 0.37628596, 0.37628596,\n",
+       "        0.37628596],\n",
+       "       [0.87094201, 0.8729542 , 0.87522218, ..., 0.87679949, 0.87679949,\n",
+       "        0.87679949],\n",
+       "       [0.63196891, 0.63215344, 0.63566528, ..., 0.63515088, 0.63515088,\n",
+       "        0.63515088]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
    ]
   },
   {
