Save when simple stacking beat baseline

--- a/code/python/small_data_analysis/constants_eval.ipynb
+++ b/code/python/small_data_analysis/constants_eval.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
     "import sys\n",
-    "sys.path.append(\"../evaluation\")\n",
-    "from metric import calculate_metric\n",
     "sys.path.append(\"../utils\")\n",
+    "from metric import calculate_metric\n",
     "from json_tools import get_from_pool\n",
     "from pool_iterator import pool_iterator\n",
     "\n",
@@ -70,48 +69,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_folder = \"../../../data/best_features_days_data/\"\n",
-    "json_filename = os.path.join(data_folder, \"day_6.json\")"
+    "def eval_consts(day):\n",
+    "    data_folder = \"../../../data/best_features_days_data/\"\n",
+    "    json_filename = os.path.join(data_folder, \"day_{}.json\".format(day))\n",
+    "    pool_positions = get_from_pool(pool_iterator(json_filename), \"pos\", int)\n",
+    "    pool_probs = get_from_pool(pool_iterator(json_filename), \"p\")\n",
+    "    pool_targets = get_from_pool(pool_iterator(json_filename), \"target\", int)\n",
+    "    for pos in list(range(10)) + [100]:\n",
+    "        print(\n",
+    "            pos,\n",
+    "            calculate_metric(\n",
+    "                [pos] * len(pool_positions),\n",
+    "                pool_positions,\n",
+    "                pool_targets,\n",
+    "                pool_probs\n",
+    "            )\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pool_positions = get_from_pool(pool_iterator(json_filename), \"pos\", int)\n",
-    "pool_probs = get_from_pool(pool_iterator(json_filename), \"p\")\n",
-    "pool_targets = get_from_pool(pool_iterator(json_filename), \"target\", int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 0, 1, ..., 0, 1, 1])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pool_targets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,17 +122,58 @@
     }
    ],
    "source": [
-    "for pos in list(range(10)) + [100]:\n",
-    "    print(\n",
-    "        pos,\n",
-    "        calculate_metric(\n",
-    "            [pos] * len(pool_positions),\n",
-    "            pool_positions,\n",
-    "            pool_targets,\n",
-    "            pool_probs\n",
-    "        )\n",
-    "    )"
+    "eval_consts(6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0.5970394736842106\n",
+      "1 0.632788868723533\n",
+      "2 0.6121212121212121\n",
+      "3 0.6224328593996841\n",
+      "4 0.6317443687794656\n",
+      "5 0.6128177966101693\n",
+      "6 0.6232106339468301\n",
+      "7 0.5950827897641747\n",
+      "8 0.5959798994974875\n",
+      "9 0.6035353535353535\n",
+      "100 0.6092436974789918\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval_consts(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
