--- a/code/python/small_data_analysis/predictions_meashure.ipynb
+++ b/code/python/small_data_analysis/predictions_meashure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,12 @@
     "sys.path.append(\"../utils\")\n",
     "from constants import DAYS_NUMBER\n",
     "from pool_iterator import  pool_iterator\n",
-    "from json_tools import get_regression_labels"
+    "from json_tools import get_regression_labels, get_from_pool"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +31,87 @@
     "labels = {\n",
     "    day: get_regression_labels(pool_iterator(json_filename))\n",
     "    for day, json_filename in enumerate(json_filenames)\n",
+    "}\n",
+    "\n",
+    "positions = {\n",
+    "    day: get_from_pool(pool_iterator(json_filename), \"pos\", int)\n",
+    "    for day, json_filename in enumerate(json_filenames)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_mse_regression_metrics(targets_folder):\n",
+    "x = positions[0]\n",
+    "x[x == 100] = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repeated = np.repeat([np.arange(11)], len(x), axis=0)\n",
+    "mask = (repeated == np.repeat(np.reshape(x, [-1, 1]), 11, axis=1)).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 1, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 1, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 1]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  8,  7, ...,  6,  8, 10])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_mse_regression_metrics(targets_folder, all_positions=False):\n",
     "    metrics = []\n",
     "    for folder in os.listdir(targets_folder):\n",
     "        predictions_filenames = [\n",
@@ -49,26 +120,15 @@
     "        ]\n",
     "        for filename in predictions_filenames:\n",
     "            predictions = np.load(filename)\n",
-    "            current_labels = labels[int(filename[-5])]\n",
-    "            metrics.append(np.mean((predictions - current_labels) ** 2))\n",
-    "    return metrics\n",
-    "\n",
-    "\n",
-    "def get_mse_expect_classification_metrics(targets_folder):\n",
-    "    metrics = []\n",
-    "    for folder in os.listdir(targets_folder):\n",
-    "        predictions_filenames = [\n",
-    "            os.path.join(targets_folder, folder, filename)\n",
-    "            for filename in os.listdir(os.path.join(targets_folder, folder))\n",
-    "        ]\n",
-    "        for filename in predictions_filenames:\n",
-    "            predictions = np.load(filename)\n",
-    "            repeated_arange = np.repeat(\n",
-    "                [np.arange(np.shape(predictions)[1])],\n",
-    "                np.shape(predictions)[0],\n",
-    "                axis=0\n",
-    "            )\n",
-    "            predictions = np.sum(predictions * repeated_arange, axis=1)\n",
+    "            if all_positions:\n",
+    "                current_positions = positions[int(filename[-5])]\n",
+    "                current_positions[current_positions == 100] = 10\n",
+    "                repeated = np.repeat([np.arange(11)], len(current_positions), axis=0)\n",
+    "                mask = (\n",
+    "                    repeated ==\n",
+    "                    np.repeat(np.reshape(current_positions, [-1, 1]), 11, axis=1)\n",
+    "                ).astype(int)\n",
+    "                predictions = np.sum(predictions * mask, axis=1)\n",
     "            current_labels = labels[int(filename[-5])]\n",
     "            metrics.append(np.mean((predictions - current_labels) ** 2))\n",
     "    return metrics\n",
@@ -93,7 +153,7 @@
     "            metrics.append(np.mean((predictions - current_labels) ** 2))\n",
     "    return metrics\n",
     "\n",
-    "def get_mse_argmax_classification_metrics(targets_folder):\n",
+    "def get_mse_expect_classification_metrics(targets_folder, all_positions=False):\n",
     "    metrics = []\n",
     "    for folder in os.listdir(targets_folder):\n",
     "        predictions_filenames = [\n",
@@ -101,11 +161,101 @@
     "            for filename in os.listdir(os.path.join(targets_folder, folder))\n",
     "        ]\n",
     "        for filename in predictions_filenames:\n",
-    "            predictions = np.argmax(np.load(filename), axis=1)\n",
+    "            predictions = np.load(filename)\n",
+    "\n",
+    "            if not all_positions:\n",
+    "                repeated_arange = np.repeat(\n",
+    "                    [np.arange(np.shape(predictions)[-1])],\n",
+    "                    np.shape(predictions)[0],\n",
+    "                    axis=0\n",
+    "                )\n",
+    "            else:\n",
+    "                repeated_arange = np.repeat(\n",
+    "                    [np.arange(np.shape(predictions)[-1])],\n",
+    "                    np.shape(predictions)[1],\n",
+    "                    axis=0\n",
+    "                )\n",
+    "                repeated_arange = np.repeat(\n",
+    "                    [repeated_arange],\n",
+    "                    np.shape(predictions)[0],\n",
+    "                    axis=0\n",
+    "                )\n",
+    "            predictions = np.sum(predictions * repeated_arange, axis=-1)\n",
+    "\n",
+    "            \n",
+    "            if all_positions:\n",
+    "                current_positions = positions[int(filename[-5])]\n",
+    "                current_positions[current_positions == 100] = 10\n",
+    "                repeated = np.repeat([np.arange(11)], len(current_positions), axis=0)\n",
+    "                mask = (\n",
+    "                    repeated ==\n",
+    "                    np.repeat(np.reshape(current_positions, [-1, 1]), 11, axis=1)\n",
+    "                ).astype(int)\n",
+    "                predictions = np.sum(predictions * mask, axis=1)\n",
+    "            \n",
     "            current_labels = labels[int(filename[-5])]\n",
     "            metrics.append(np.mean((predictions - current_labels) ** 2))\n",
     "    return metrics"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5407472155309981 0.00015123902964216034\n"
+     ]
+    }
+   ],
+   "source": [
+    "metrics = get_mse_regression_metrics(\"regression_predictions\", all_positions=True)\n",
+    "print(np.mean(metrics), np.std(metrics) / np.sqrt(15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.539709817171216 6.09962029556652e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "metrics = get_mse_expect_classification_metrics(\n",
+    "    \"classification_predictions_max_clicks_3\", all_positions=True\n",
+    ")\n",
+    "print(np.mean(metrics), np.std(metrics) / np.sqrt(15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -277,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
