Different train sizes for different positions models.

--- a/data/get_best_features_pool.ipynb
+++ b/data/get_best_features_pool.ipynb
@@ -100,7 +100,7 @@
     "        if np.random.binomial(1, 0.5):\n",
     "            continue\n",
     "        parts = line.strip().split('\\t')\n",
-    "        x.append(list(map(float, parts[3:130])))\n",
+    "        x.append(list(map(float, parts[3:])))\n",
     "        y.append(int(parts[0]))"
    ]
   },
@@ -3194,7 +3194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3203,7 +3203,7 @@
        "(1097, 128)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3248,7 +3248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3258,7 +3258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3284,7 +3284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3497,6 +3497,35 @@
    "outputs": [],
    "source": [
     "print(np.shape(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=next(pool_iterator(\"new_days_data_best_features/day_1.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "128"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(x[\"factors\"])"
    ]
   },
   {
