--- a/code/python/bandits/non_contextual_bandits.ipynb
+++ b/code/python/bandits/non_contextual_bandits.ipynb
@@ -13,14 +13,14 @@
     "import sys\n",
     "from json import loads\n",
     "\n",
-    "sys.path.append(\"../code/python/utils\")\n",
-    "from pool_iterator import pool_iterator\n",
-    "from metric import calculate_metric\n",
-    "from json_tools import get_from_pool\n",
-    "sys.path.append(\"../code/python/bandits\")\n",
     "from tomson_bandit import TomsonBandit\n",
     "from cascade_bandit import CascadeBandit\n",
     "from damerau_levenshtien import damerau_levenshtein_distance\n",
+    "\n",
+    "sys.path.append(\"../utils\")\n",
+    "from pool_iterator import pool_iterator\n",
+    "from metric import calculate_metric\n",
+    "from json_tools import get_from_pool\n",
     "\n",
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
@@ -124,8 +124,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.75 s, sys: 90.4 ms, total: 4.84 s\n",
-      "Wall time: 4.8 s\n"
+      "CPU times: user 4.97 s, sys: 68.4 ms, total: 5.04 s\n",
+      "Wall time: 5.31 s\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
     "\n",
     "nearest_queries = {}\n",
     "\n",
-    "with open(\"../code/python/bandits/nearest_queries.txt\") as handler:\n",
+    "with open(\"nearest_queries.txt\") as handler:\n",
     "    for i, line in enumerate(handler):\n",
     "        parsed_line = loads((\"{\" + line.strip() + \"}\").replace('(', '\"(').replace(')', ')\"'))\n",
     "        query_str = line[:line.find(\":\")]\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -155,8 +155,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.1 s, sys: 170 ms, total: 3.27 s\n",
-      "Wall time: 3.27 s\n"
+      "CPU times: user 5.68 s, sys: 170 ms, total: 5.85 s\n",
+      "Wall time: 5.85 s\n"
      ]
     }
    ],
@@ -192,13 +192,6 @@
     "train_pool_filenames = pool_filenames[:3]\n",
     "test_pool = pool_filenames[3]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -409,6 +402,13 @@
     "])\n",
     "plt.plot(x[:300], y[:300])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
