--- a/data/get_best_features_pool.ipynb
+++ b/data/get_best_features_pool.ipynb
@@ -3194,46 +3194,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1097, 128)"
+       "(1097, 16)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(features_importance), len(features_importance[features_importance > 0.1])"
+    "len(features_importance), len(features_importance[features_importance > 1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([111.,   6.,   4.,   3.,   0.,   1.,   1.,   1.,   0.,   1.]),\n",
-       " array([0.10360745, 0.98328754, 1.86296763, 2.74264772, 3.62232781,\n",
-       "        4.5020079 , 5.38168799, 6.26136808, 7.14104818, 8.02072827,\n",
+       "(array([5., 4., 3., 0., 1., 0., 1., 1., 0., 1.]),\n",
+       " array([1.07344496, 1.8561413 , 2.63883764, 3.42153398, 4.20423032,\n",
+       "        4.98692666, 5.769623  , 6.55231934, 7.33501568, 8.11771202,\n",
        "        8.90040836]),\n",
        " <a list of 10 Patch objects>)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAD8CAYAAAB5Pm/hAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMi4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvhp/UCwAADIhJREFUeJzt3V+InfWdx/H3Z52K1SJqHcUmsrEQ\n2kqhKIPYCmUxvai1VC8qWHa7QYTcuK39A23aG28VSv8sLELQdrOsuJVUUFrprqSWZS827ERl/ZMW\ng3VjamqmbLXd7oWVfvdiHks2mZjJec5wZr55v0DOnGeeM8/Xx+SdJ7/zx1QVkqS+/mzWA0iS1pah\nl6TmDL0kNWfoJak5Qy9JzRl6SWrO0EtSc4Zekpoz9JLU3NysBwC4+OKLa8uWLbMeQ5I2lP379/+6\nquZPtd+6CP2WLVtYXFyc9RiStKEk+a/V7OfSjSQ1Z+glqTlDL0nNGXpJas7QS1Jzhl6SmjP0ktSc\noZek5gy9JDW3Lt4ZO8aWnT+a2bFfuvvGmR1bklbLK3pJas7QS1Jzhl6SmjP0ktScoZek5gy9JDVn\n6CWpOUMvSc0ZeklqztBLUnOGXpKaM/SS1Jyhl6TmDL0kNWfoJak5Qy9JzZ0y9Em+m+RokmeP2XZR\nkseTvDDcXjhsT5K/TXIwyX8muXoth5ckndpqruj/Hvj4cdt2Anuraiuwd7gPcAOwdfhnB3DvdMaU\nJE3qlKGvqn8F/vu4zTcBu4evdwM3H7P9H2rZvwMXJLlsWsNKkk7fpGv0l1bVEYDh9pJh+ybg5WP2\nOzxsO0GSHUkWkywuLS1NOIYk6VSm/WRsVthWK+1YVbuqaqGqFubn56c8hiTpLZOG/tW3lmSG26PD\n9sPA5cfstxl4ZfLxJEljTRr6R4Htw9fbgUeO2f7Xw6tvrgVef2uJR5I0G3On2iHJg8BfABcnOQzc\nBdwNPJTkduAQcMuw+2PAJ4CDwP8Ct63BzJKk03DK0FfVZ07yrW0r7FvAHWOHkiRNj++MlaTmDL0k\nNWfoJak5Qy9JzRl6SWrO0EtSc4Zekpoz9JLUnKGXpOYMvSQ1Z+glqTlDL0nNGXpJas7QS1Jzhl6S\nmjP0ktScoZek5gy9JDVn6CWpOUMvSc0ZeklqztBLUnOGXpKaM/SS1Jyhl6TmDL0kNWfoJak5Qy9J\nzY0KfZIvJnkuybNJHkxyTpIrkuxL8kKS7yc5e1rDSpJO38ShT7IJ+DywUFUfBM4CbgXuAb5VVVuB\n3wC3T2NQSdJkxi7dzAHvTDIHnAscAa4H9gzf3w3cPPIYkqQRJg59Vf0S+AZwiOXAvw7sB16rqjeH\n3Q4Dm8YOKUma3JilmwuBm4ArgPcA5wE3rLBrneTxO5IsJllcWlqadAxJ0imMWbr5GPCLqlqqqj8A\nDwMfAS4YlnIANgOvrPTgqtpVVQtVtTA/Pz9iDEnS2xkT+kPAtUnOTRJgG/A88ATw6WGf7cAj40aU\nJI0xZo1+H8tPuj4JPDP8rF3AV4EvJTkIvBu4fwpzSpImNHfqXU6uqu4C7jpu84vANWN+riRpenxn\nrCQ1Z+glqTlDL0nNGXpJas7QS1Jzhl6SmjP0ktScoZek5gy9JDVn6CWpOUMvSc0ZeklqztBLUnOG\nXpKaM/SS1Jyhl6TmDL0kNWfoJak5Qy9JzRl6SWrO0EtSc4Zekpoz9JLUnKGXpOYMvSQ1Z+glqTlD\nL0nNGXpJam5U6JNckGRPkp8lOZDkw0kuSvJ4kheG2wunNawk6fSNvaL/DvDjqno/8CHgALAT2FtV\nW4G9w31J0oxMHPok5wMfBe4HqKo3quo14CZg97DbbuDmsUNKkiY35or+vcAS8L0kTyW5L8l5wKVV\ndQRguL1kCnNKkiY0JvRzwNXAvVV1FfB7TmOZJsmOJItJFpeWlkaMIUl6O2NCfxg4XFX7hvt7WA7/\nq0kuAxhuj6704KraVVULVbUwPz8/YgxJ0tuZOPRV9Svg5STvGzZtA54HHgW2D9u2A4+MmlCSNMrc\nyMd/DnggydnAi8BtLP/h8VCS24FDwC0jjyFJGmFU6KvqaWBhhW9tG/NzJUnT4ztjJak5Qy9JzRl6\nSWrO0EtSc4Zekpoz9JLUnKGXpOYMvSQ1Z+glqTlDL0nNGXpJas7QS1Jzhl6SmjP0ktScoZek5gy9\nJDVn6CWpOUMvSc0ZeklqztBLUnOGXpKaM/SS1Jyhl6TmDL0kNWfoJak5Qy9JzRl6SWrO0EtSc4Ze\nkpobHfokZyV5KskPh/tXJNmX5IUk309y9vgxJUmTmsYV/Z3AgWPu3wN8q6q2Ar8Bbp/CMSRJExoV\n+iSbgRuB+4b7Aa4H9gy77AZuHnMMSdI4Y6/ovw18BfjjcP/dwGtV9eZw/zCwaaUHJtmRZDHJ4tLS\n0sgxJEknM3Hok3wSOFpV+4/dvMKutdLjq2pXVS1U1cL8/PykY0iSTmFuxGOvAz6V5BPAOcD5LF/h\nX5Bkbriq3wy8Mn5MSdKkJr6ir6qvVdXmqtoC3Ar8pKr+EngC+PSw23bgkdFTSpImthavo/8q8KUk\nB1les79/DY4hSVqlMUs3f1JVPwV+Onz9InDNNH6uJGk83xkrSc0ZeklqztBLUnOGXpKaM/SS1Jyh\nl6TmDL0kNWfoJak5Qy9JzRl6SWrO0EtSc4Zekpoz9JLUnKGXpOYMvSQ1Z+glqTlDL0nNGXpJas7Q\nS1Jzhl6SmjP0ktScoZek5gy9JDVn6CWpOUMvSc0ZeklqztBLUnOGXpKamzj0SS5P8kSSA0meS3Ln\nsP2iJI8neWG4vXB640qSTteYK/o3gS9X1QeAa4E7klwJ7AT2VtVWYO9wX5I0IxOHvqqOVNWTw9e/\nAw4Am4CbgN3DbruBm8cOKUma3FTW6JNsAa4C9gGXVtURWP7DALjkJI/ZkWQxyeLS0tI0xpAkrWB0\n6JO8C/gB8IWq+u1qH1dVu6pqoaoW5ufnx44hSTqJUaFP8g6WI/9AVT08bH41yWXD9y8Djo4bUZI0\nxphX3QS4HzhQVd885luPAtuHr7cDj0w+niRprLkRj70O+CzwTJKnh21fB+4GHkpyO3AIuGXciJKk\nMSYOfVX9G5CTfHvbpD9XkjRdvjNWkpoz9JLUnKGXpOYMvSQ1Z+glqTlDL0nNGXpJas7QS1Jzhl6S\nmjP0ktScoZek5gy9JDVn6CWpOUMvSc0ZeklqztBLUnOGXpKaM/SS1Jyhl6TmDL0kNWfoJam5uVkP\nsJFt2fmjmRz3pbtvnMlxJW1MXtFLUnOGXpKac+lmA5rVkhG4bCRtRF7RS1JzXtHrtPgEtLTxeEUv\nSc2tSeiTfDzJz5McTLJzLY4hSVqdqYc+yVnA3wE3AFcCn0ly5bSPI0lanbVYo78GOFhVLwIk+Sfg\nJuD5NTiWtKZm+QqnM9Gsnovp/kq2tVi62QS8fMz9w8M2SdIMrMUVfVbYVifslOwAdgx3/yfJz0/j\nGBcDv55gts5an5PcM9HDWp+TCa3rczLhf+dpmNl5Gfnv/Oer2WktQn8YuPyY+5uBV47fqap2Absm\nOUCSxapamGy8njwnJ/KcnMhzsrLu52Utlm7+A9ia5IokZwO3Ao+uwXEkSasw9Sv6qnozyd8A/wyc\nBXy3qp6b9nEkSauzJu+MrarHgMfW4mcPJlryac5zciLPyYk8JytrfV5SdcLzpJKkRvwIBElqbkOF\n3o9W+P+SXJ7kiSQHkjyX5M5Zz7ReJDkryVNJfjjrWdaLJBck2ZPkZ8OvmQ/PeqZZS/LF4ffOs0ke\nTHLOrGdaCxsm9H60woreBL5cVR8ArgXu8Jz8yZ3AgVkPsc58B/hxVb0f+BBn+PlJsgn4PLBQVR9k\n+cUjt852qrWxYULPMR+tUFVvAG99tMIZq6qOVNWTw9e/Y/k37hn/LuQkm4EbgftmPct6keR84KPA\n/QBV9UZVvTbbqdaFOeCdSeaAc1nhPT8dbKTQ+9EKbyPJFuAqYN9sJ1kXvg18BfjjrAdZR94LLAHf\nG5a07kty3qyHmqWq+iXwDeAQcAR4var+ZbZTrY2NFPpVfbTCmSjJu4AfAF+oqt/Oep5ZSvJJ4GhV\n7Z/1LOvMHHA1cG9VXQX8Hjijn+dKciHLqwJXAO8BzkvyV7Odam1spNCv6qMVzjRJ3sFy5B+oqodn\nPc86cB3wqSQvsby8d32Sf5ztSOvCYeBwVb31N749LIf/TPYx4BdVtVRVfwAeBj4y45nWxEYKvR+t\ncJwkYXnN9UBVfXPW86wHVfW1qtpcVVtY/jXyk6pqeZV2OqrqV8DLSd43bNqGHx1+CLg2ybnD76Vt\nNH2CesP8P2P9aIUVXQd8FngmydPDtq8P70yWjvc54IHhQulF4LYZzzNTVbUvyR7gSZZfwfYUTd8h\n6ztjJam5jbR0I0magKGXpOYMvSQ1Z+glqTlDL0nNGXpJas7QS1Jzhl6Smvs/t7W8XU2GiHIAAAAA\nSUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW4AAAD8CAYAAABXe05zAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMi4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvhp/UCwAADCtJREFUeJzt3F+MnXWdx/HPx04NUDEYezQsZRxN\nNkRCskImrNqEuKAGLUF3ryDRC2Mym427Kbsmpnqz8Q4SY7wxmzSUFSNCEGhiAJEmikiyoJ0C2lrM\numzVCrst8Q9014jFjxfnGT2WMz3PDOeZ53zr+5VM2mmfzvl0Mn3nzO+cUycRAKCOV/U9AACwNoQb\nAIoh3ABQDOEGgGIINwAUQ7gBoBjCDQDFEG4AKIZwA0Axc1180K1bt2ZhYaGLDw0AZ6Tl5eXnkgza\nXNtJuBcWFrR///4uPjQAnJFs/7jttRyVAEAxhBsAiiHcAFAM4QaAYgg3ABTT6lklto9IekHSS5JO\nJlnschQAYHVreTrg3yR5rrMlAIBWOCoBgGLahjuSHrS9bHupy0EAgNNre1SyPckztt8gaZ/tp5I8\nPHpBE/QlSZqfn1/3oIVd9637z74SR27c0cvtAsBatbrHneSZ5sdjkvZKunzMNbuTLCZZHAxavdwe\nALAOE8Nte4vtc1d+Lum9kg52PQwAMF6bo5I3Stpre+X6Lyd5oNNVAIBVTQx3kqcl/dUGbAEAtMDT\nAQGgGMINAMUQbgAohnADQDGEGwCKIdwAUAzhBoBiCDcAFEO4AaAYwg0AxRBuACiGcANAMYQbAIoh\n3ABQDOEGgGIINwAUQ7gBoBjCDQDFEG4AKIZwA0AxhBsAiiHcAFAM4QaAYgg3ABRDuAGgGMINAMUQ\nbgAohnADQDGEGwCKIdwAUAzhBoBiCDcAFNM63LY32X7c9r1dDgIAnN5a7nHvlHS4qyEAgHZahdv2\nNkk7JN3c7RwAwCRt73F/TtInJP2uwy0AgBbmJl1g+xpJx5Is237Xaa5bkrQkSfPz81MbuFEWdt3X\n220fuXFHb7cNoJ4297i3S7rW9hFJd0i60vaXTr0oye4ki0kWB4PBlGcCAFZMDHeSTybZlmRB0nWS\nvpHkQ50vAwCMxfO4AaCYiWfco5I8JOmhTpYAAFrhHjcAFEO4AaAYwg0AxRBuACiGcANAMYQbAIoh\n3ABQDOEGgGIINwAUQ7gBoBjCDQDFEG4AKIZwA0AxhBsAiiHcAFAM4QaAYgg3ABRDuAGgGMINAMUQ\nbgAohnADQDGEGwCKIdwAUAzhBoBiCDcAFEO4AaAYwg0AxRBuACiGcANAMYQbAIoh3ABQDOEGgGII\nNwAUMzHcts+y/R3bT9o+ZPvTGzEMADDeXItrfiPpyiQnbG+W9IjtryV5tONtAIAxJoY7SSSdaN7d\n3Lyly1EAgNW1OuO2vcn2E5KOSdqX5LFuZwEAVtPmqERJXpL0NtvnSdpr+5IkB0evsb0kaUmS5ufn\npz70TLaw675ebvfIjTt6uV0Ar8yanlWS5JeSHpJ09Zjf251kMcniYDCY0jwAwKnaPKtk0NzTlu2z\nJb1b0lNdDwMAjNfmqOR8Sbfa3qRh6O9Mcm+3swAAq2nzrJLvSbp0A7YAAFrglZMAUAzhBoBiCDcA\nFEO4AaAYwg0AxRBuACiGcANAMYQbAIoh3ABQDOEGgGIINwAUQ7gBoBjCDQDFEG4AKIZwA0AxhBsA\niiHcAFAM4QaAYgg3ABRDuAGgGMINAMUQbgAohnADQDGEGwCKIdwAUAzhBoBiCDcAFEO4AaAYwg0A\nxRBuACiGcANAMYQbAIqZGG7bF9r+pu3Dtg/Z3rkRwwAA4821uOakpI8nOWD7XEnLtvcl+UHH2wAA\nY0y8x53k2SQHmp+/IOmwpAu6HgYAGG9NZ9y2FyRdKumxLsYAACZrHW7br5F0t6Qbkjw/5veXbO+3\nvf/48ePT3AgAGNEq3LY3axjt25LcM+6aJLuTLCZZHAwG09wIABjR5lkllrRH0uEkn+1+EgDgdNrc\n494u6cOSrrT9RPP2/o53AQBWMfHpgEkekeQN2AIAaIFXTgJAMYQbAIoh3ABQDOEGgGIINwAUQ7gB\noBjCDQDFEG4AKIZwA0AxhBsAiiHcAFAM4QaAYgg3ABRDuAGgGMINAMUQbgAohnADQDGEGwCKIdwA\nUAzhBoBiCDcAFEO4AaAYwg0AxRBuACiGcANAMYQbAIoh3ABQDOEGgGIINwAUQ7gBoBjCDQDFEG4A\nKIZwA0AxE8Nt+xbbx2wf3IhBAIDTa3OP+wuSru54BwCgpYnhTvKwpJ9vwBYAQAtz0/pAtpckLUnS\n/Pz8tD4szlALu+7r5XaP3Lijl9vt6+/bp74+19KZ//U1tQcnk+xOsphkcTAYTOvDAgBOwbNKAKAY\nwg0AxbR5OuDtkv5D0kW2j9r+aPezAACrmfjgZJLrN2IIAKAdjkoAoBjCDQDFEG4AKIZwA0AxhBsA\niiHcAFAM4QaAYgg3ABRDuAGgGMINAMUQbgAohnADQDGEGwCKIdwAUAzhBoBiCDcAFEO4AaAYwg0A\nxRBuACiGcANAMYQbAIoh3ABQDOEGgGIINwAUQ7gBoBjCDQDFEG4AKIZwA0AxhBsAiiHcAFAM4QaA\nYgg3ABTTKty2r7b9Q9s/sr2r61EAgNVNDLftTZI+L+l9ki6WdL3ti7seBgAYr8097ssl/SjJ00le\nlHSHpA90OwsAsJo24b5A0k9H3j/a/BoAoAdzLa7xmF/Lyy6ylyQtNe+esP3DNezYKum5NVy/kc7Y\nbb5piktebiY/b75pNnc1zqhtHX99jZqZz9uYv/Natr2p7e20CfdRSReOvL9N0jOnXpRkt6TdbW94\nlO39SRbX82e7xrb1mdVts7pLYtt6/Tlua3NU8l1Jf2n7zbZfLek6SV+d9hAAQDsT73EnOWn7HyV9\nXdImSbckOdT5MgDAWG2OSpTkfkn3d7hjXUcsG4Rt6zOr22Z1l8S29fqz2+bkZY8zAgBmGC95B4Bi\neg237VtsH7N9sM8dp7J9oe1v2j5s+5DtnX1vWmH7LNvfsf1ks+3TfW86le1Nth+3fW/fW0bZPmL7\n+7afsL2/7z2jbJ9n+y7bTzVfd+/oe5Mk2b6o+XytvD1v+4a+d62w/c/Nv4ODtm+3fVbfmyTJ9s5m\n06EuPl+9HpXYvkLSCUlfTHJJb0NOYft8SecnOWD7XEnLkj6Y5Ac9T5NtS9qS5ITtzZIekbQzyaM9\nT/sD2/8iaVHSa5Nc0/eeFbaPSFpMMhPP+R1l+1ZJ305yc/PsrXOS/LLvXaOa//7iZ5L+OsmPZ2DP\nBRp+/V+c5Ne275R0f5Iv9LzrEg1fYX65pBclPSDpH5L857Ruo9d73EkelvTzPjeMk+TZJAean78g\n6bBm5NWiGTrRvLu5eZuZBypsb5O0Q9LNfW+pwvZrJV0haY8kJXlx1qLduErSf81CtEfMSTrb9pyk\nczTmNSY9eKukR5P8f5KTkr4l6W+neQOccU9ge0HSpZIe63fJHzVHEU9IOiZpX5KZ2Sbpc5I+Iel3\nfQ8ZI5IetL3cvNJ3VrxF0nFJ/94cMd1se0vfo8a4TtLtfY9YkeRnkj4j6SeSnpX0qyQP9rtKknRQ\n0hW2X2/7HEnv15++iPEVI9ynYfs1ku6WdEOS5/vesyLJS0nepuGrWC9vvjXrne1rJB1Lstz3llVs\nT3KZhv/T5ceao7pZMCfpMkn/luRSSf8naab+++Tm+OZaSV/pe8sK26/T8D+8e7Okv5C0xfaH+l0l\nJTks6SZJ+zQ8JnlS0slp3gbhXkVzfny3pNuS3NP3nnGab6cfknR1z1NWbJd0bXOWfIekK21/qd9J\nf5TkmebHY5L2angGOQuOSjo68p3TXRqGfJa8T9KBJP/b95AR75b030mOJ/mtpHskvbPnTZKkJHuS\nXJbkCg2Pg6d2vi0R7rGaBwD3SDqc5LN97xlle2D7vObnZ2v4xftUv6uGknwyybYkCxp+W/2NJL3f\nA5Ik21uaB5rVHEO8V8NvaXuX5H8k/dT2Rc0vXSWp9wfCT3G9ZuiYpPETSW+3fU7zb/YqDR+P6p3t\nNzQ/zkv6O035c9fqlZNdsX27pHdJ2mr7qKR/TbKnz02N7ZI+LOn7zVmyJH2qeQVp386XdGvzCP+r\nJN2ZZKaedjej3ihp7/Dft+YkfTnJA/1O+hP/JOm25kjiaUkf6XnPHzTntO+R9Pd9bxmV5DHbd0k6\noOFRxOOanVdR3m379ZJ+K+ljSX4xzQ/OKycBoBiOSgCgGMINAMUQbgAohnADQDGEGwCKIdwAUAzh\nBoBiCDcAFPN7zhfRAPXGtOIAAAAASUVORK5CYII=\n",
       "text/plain": [
        "<Figure size 432x288 with 1 Axes>"
       ]
@@ -3243,38 +3243,29 @@
     }
    ],
    "source": [
-    "plt.hist(features_importance[features_importance > 0.1])"
+    "plt.hist(features_importance[features_importance > 1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "indices = np.arange(len(features_importance))\n",
-    "best_features = indices[features_importance > 0.1]"
+    "best_features = indices[features_importance > 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "128 [  21   62   71   73   80  106  109  110  111  151  152  171  173  175\n",
-      "  176  178  183  184  186  222  228  237  240  255  278  335  369  377\n",
-      "  397  412  425  462  467  508  511  518  524  526  540  541  542  543\n",
-      "  555  561  567  569  570  572  573  575  581  622  642  648  649  651\n",
-      "  652  669  671  674  677  680  691  696  697  700  719  720  722  723\n",
-      "  725  726  727  729  733  764  766  770  784  785  786  789  793  795\n",
-      "  796  797  798  800  802  803  804  806  807  808  809  810  811  812\n",
-      "  814  870  873  874  895  896  897  901  951  958  959  964  965  966\n",
-      "  968  969  970  971  994 1000 1001 1004 1010 1026 1033 1046 1056 1058\n",
-      " 1089 1092]\n"
+      "16 [ 80 152 175 240 425 555 669 691 719 723 725 796 806 901 968 969]\n"
      ]
     }
    ],
@@ -3284,14 +3275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.03562376755836631, -1.9724586389911931, 1.0157771245454768, 9.927857941481841, -0.453551128141278, 0.22185358321372833, 1.018460542775818, 0.4617758694609531, 0.5174604377583479, -0.5362782381370247, -0.031026900929330022, -0.10472274130921476, -0.0775588902976067, -0.11148789276530695, 10.615265700161952, -0.30432633967133577, -0.4626786437876348, 0.023589089617758244, 4.612433250278899, 1.1225305394142062, 2.30961293178299, -0.1025896141633862, 3.5893665153278715, 0.030383983332993327, -0.05469408764343284, 0.580700962459085, 1.6107006019506693, -0.09523071576219196, -0.13935670935386485, -2.698006809999656, 0.4330477589788092, -1.2616904552925603, -1.0626723328249497, -0.9237202400091798, -1.103694914163125, -0.5573589920491535, -0.8105226709737121, -1.101248698900244, -0.25271051841444325, 0.33988025102096303, 0.5910792877948507, -0.9021584721301237, 0.4525795326994083, 0.618479116780332, 0.7285683019652636, 0.2805894350216972, 0.7353809285498222, 0.4785416388145736, 0.5355132813362582, 0.9314574391957636, -0.5519487916565049, 0.1278283640471693, 0.499337679803991, -0.5423271545920398, -0.01449061116563351, -0.5970260642745107, 0.02853414263059434, -0.18638026589501597, -0.24044499632021257, 0.6041441729986317, -0.35259614958290814, -0.1638892227651275, -0.7675326338529879, 0.626727592405964, -0.6519261466856406, 0.5346795368678605, -0.09204761721655724, 0.821399632300887, -0.4075514560109665, 0.4994166827145251, 0.31349156692964203, 0.055218654904838245, -0.35891355806136865, -0.4179525007972752, -0.5282301281248635, -0.06298468561660242, -0.6963486623521954, -0.5495063744992783, 0.6177349188796033, -0.015870381357593874, -1.6360130398947916, -1.038008563811056, 0.2680238685423581, 0.8775862922274014, -0.8923815976427818, 0.2109445776900568, -2.467183590593375, -0.7943337696363121, -1.0859150192519715, -0.4825539451578612, -0.02226858562298357, -0.44869688696531174, -2.8373760279863682, 0.793994994843597, 1.7351341431146006, 0.5605809485871712, -0.026514960999206194, 0.6073225732248193, -1.3508890926736767, -0.04178160025503727, -0.061871340520334356, -0.06066368036130704, -0.568315490806505, -0.47894277145733755, -0.6605701722206975, 0.6514230759641931, -0.3607049148805108, 1.8036289873964988, -0.19620487826446176, 0.5492617295226776, -0.06814746432675291, 0.9989644806877453, -0.7750663420964186, 0.46239376100224316, 0.3885383902443593, 0.378386608502124, -0.0630201569554565, -0.08269953800833268, -0.5547021581535629, -0.22381516950660257, -0.19340735724025188, -0.27650693068417215, -0.1339289267857588, 1.460198452590002, 1.1902479821816914, -0.456371468972525, -0.787905288628323, -0.22521015178841988]\n"
+      "[-0.453551128141278, -0.031026900929330022, -0.11148789276530695, 3.5893665153278715, 0.4330477589788092, 0.4525795326994083, -0.18638026589501597, -0.7675326338529879, -0.09204761721655724, 0.4994166827145251, 0.31349156692964203, -0.8923815976427818, -0.44869688696531174, 0.6514230759641931, -0.7750663420964186, 0.46239376100224316]\n"
      ]
     }
    ],
@@ -3319,20 +3310,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def edit(filename):\n",
-    "    with open(\"new_days_data_best_features/{}.csv\".format(filename), 'w') as new_pool:\n",
-    "        for i, item in enumerate(pool_iterator(\"new_days_data/{}.csv\".format(filename))):\n",
+    "def edit(src_filename, dst_filename):\n",
+    "    with open(dst_filename, 'w') as new_pool:\n",
+    "        for i, item in enumerate(pool_iterator(src_filename)):\n",
     "            if i % 10000 == 0:\n",
     "                print(\"{} / 600000\".format(i))\n",
     "            item[\"factors\"] = list(np.array(item[\"factors\"])[best_features])\n",
     "            print(dumps(item), file=new_pool)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " mouving 0\n",
+      "0 / 600000\n",
+      "10000 / 600000\n",
+      "20000 / 600000\n",
+      "30000 / 600000\n",
+      "40000 / 600000\n",
+      "50000 / 600000\n",
+      "60000 / 600000\n",
+      "70000 / 600000\n",
+      "80000 / 600000\n",
+      "90000 / 600000\n",
+      "100000 / 600000\n",
+      "110000 / 600000\n",
+      "120000 / 600000\n",
+      "130000 / 600000\n",
+      "140000 / 600000\n",
+      " mouving 1\n",
+      "0 / 600000\n",
+      "10000 / 600000\n",
+      "20000 / 600000\n",
+      "30000 / 600000\n",
+      "40000 / 600000\n",
+      "50000 / 600000\n",
+      "60000 / 600000\n",
+      "70000 / 600000\n",
+      "80000 / 600000\n",
+      "90000 / 600000\n",
+      "100000 / 600000\n",
+      "110000 / 600000\n",
+      "120000 / 600000\n",
+      "130000 / 600000\n",
+      "140000 / 600000\n",
+      " mouving 2\n",
+      "0 / 600000\n",
+      "10000 / 600000\n",
+      "20000 / 600000\n",
+      "30000 / 600000\n",
+      "40000 / 600000\n",
+      "50000 / 600000\n",
+      "60000 / 600000\n",
+      "70000 / 600000\n",
+      "80000 / 600000\n",
+      "90000 / 600000\n",
+      "100000 / 600000\n",
+      "110000 / 600000\n",
+      "120000 / 600000\n",
+      "130000 / 600000\n",
+      "140000 / 600000\n",
+      " mouving 3\n",
+      "0 / 600000\n",
+      "10000 / 600000\n",
+      "20000 / 600000\n",
+      "30000 / 600000\n",
+      "40000 / 600000\n",
+      "50000 / 600000\n",
+      "60000 / 600000\n",
+      "70000 / 600000\n",
+      "80000 / 600000\n",
+      "90000 / 600000\n",
+      "100000 / 600000\n",
+      "110000 / 600000\n",
+      "120000 / 600000\n",
+      "130000 / 600000\n",
+      "140000 / 600000\n",
+      "CPU times: user 3min 17s, sys: 3.31 s, total: 3min 20s\n",
+      "Wall time: 3min 30s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i in range(4):\n",
+    "    print(\" mouving\", i)\n",
+    "    edit(\n",
+    "        \"pool_with_queries/train_test_split/all_features_day_{}.json\".format(i),\n",
+    "        \"pool_with_queries/train_test_split/day_{}.json\".format(i)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
