--- a/code/python/new_data_analysis/constants_eval.ipynb
+++ b/code/python/new_data_analysis/constants_eval.ipynb
@@ -25,28 +25,16 @@
    "outputs": [],
    "source": [
     "def eval_consts_on_day(day):\n",
-    "    data_folder = \"../../../data/new_days_data_best_features//\"\n",
+    "    data_folder = \"../../../data/pool_with_queries/train_test_split/\"\n",
     "    json_filename = os.path.join(data_folder, \"day_{}.json\".format(day))\n",
-    "    pool_positions = get_from_pool(pool_iterator(json_filename), \"pos\", int)\n",
-    "    pool_probs = get_from_pool(pool_iterator(json_filename), \"p\")\n",
-    "    pool_targets = get_from_pool(pool_iterator(json_filename), \"target\", int)\n",
-    "    for pos in list(range(10)) + [100]:\n",
-    "        print(\n",
-    "            pos,\n",
-    "            calculate_metric(\n",
-    "                [pos] * len(pool_positions),\n",
-    "                pool_positions,\n",
-    "                pool_targets,\n",
-    "                pool_probs\n",
-    "            )\n",
-    "        )\n",
+    "    return eval_consts_on_file(json_filename)\n",
     "\n",
     "def eval_consts_on_file(filename):\n",
     "    pool_positions = get_from_pool(pool_iterator(filename), \"pos\", int)\n",
     "    pool_probs = get_from_pool(pool_iterator(filename), \"p\")\n",
     "    pool_targets = get_from_pool(pool_iterator(filename), \"target\", int)\n",
-    "    for pos in list(range(10)) + [100]:\n",
-    "        print(\n",
+    "    \n",
+    "    return [(\n",
     "            pos,\n",
     "            calculate_metric(\n",
     "                [pos] * len(pool_positions),\n",
@@ -54,7 +42,8 @@
     "                pool_targets,\n",
     "                pool_probs\n",
     "            )\n",
-    "        )"
+    "        ) for pos in list(range(10)) + [100]\n",
+    "    ]"
    ]
   },
   {
@@ -63,25 +52,28 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0.6064939631930607\n",
-      "1 0.6084217506631299\n",
-      "2 0.6084685397704788\n",
-      "3 0.6109770808202654\n",
-      "4 0.6121323529411764\n",
-      "5 0.6063089195068891\n",
-      "6 0.6258897776473178\n",
-      "7 0.6141441897461853\n",
-      "8 0.595246617510201\n",
-      "9 0.6178890876565296\n",
-      "100 0.5974335331181805\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[(0, 0.5926668238622966),\n",
+       " (1, 0.6032418952618454),\n",
+       " (2, 0.6076345431789737),\n",
+       " (3, 0.617495451788963),\n",
+       " (4, 0.6061419200954085),\n",
+       " (5, 0.6040858167972466),\n",
+       " (6, 0.6196709585121603),\n",
+       " (7, 0.611530986827899),\n",
+       " (8, 0.6019623067692523),\n",
+       " (9, 0.6252191700759789),\n",
+       " (100, 0.6097636097636097)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_consts_on_day(1)"
+    "eval_consts_on_day(0)"
    ]
   },
   {
@@ -90,25 +82,28 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0.5943593314763231\n",
-      "1 0.6115349149132369\n",
-      "2 0.6189396309039724\n",
-      "3 0.6269731800766284\n",
-      "4 0.6208142793922407\n",
-      "5 0.6211152744104034\n",
-      "6 0.6096389050669775\n",
-      "7 0.6084181844256417\n",
-      "8 0.6143050509368098\n",
-      "9 0.6242060943409692\n",
-      "100 0.6096511449208547\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[(0, 0.5870839193624003),\n",
+       " (1, 0.613757940488131),\n",
+       " (2, 0.6175675675675677),\n",
+       " (3, 0.6156532300918544),\n",
+       " (4, 0.6304412200177671),\n",
+       " (5, 0.6112086625695055),\n",
+       " (6, 0.6174007220216607),\n",
+       " (7, 0.602004036908881),\n",
+       " (8, 0.6151033609900155),\n",
+       " (9, 0.6165435110122678),\n",
+       " (100, 0.6017119062307219)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_consts_on_day(2)"
+    "eval_consts_on_day(1)"
    ]
   },
   {
@@ -117,21 +112,54 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0.5925493401845149\n",
-      "1 0.6183554817275747\n",
-      "2 0.6140811455847255\n",
-      "3 0.6199245283018869\n",
-      "4 0.6231809115756816\n",
-      "5 0.6159362549800796\n",
-      "6 0.6116539732720218\n",
-      "7 0.6195840554592721\n",
-      "8 0.6160265931112526\n",
-      "9 0.6140902772697342\n",
-      "100 0.6036731229261517\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[(0, 0.6067073170731706),\n",
+       " (1, 0.6156049882035726),\n",
+       " (2, 0.6173747923095181),\n",
+       " (3, 0.6142867873507096),\n",
+       " (4, 0.6160218951105851),\n",
+       " (5, 0.6157205240174672),\n",
+       " (6, 0.6209801479745074),\n",
+       " (7, 0.6123647167008558),\n",
+       " (8, 0.6062837506136476),\n",
+       " (9, 0.6092500540306892),\n",
+       " (100, 0.5986121819583656)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_consts_on_day(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0.597785108388313),\n",
+       " (1, 0.6099456748850818),\n",
+       " (2, 0.612070331062886),\n",
+       " (3, 0.6208130328867236),\n",
+       " (4, 0.6088980858768753),\n",
+       " (5, 0.6147480419683761),\n",
+       " (6, 0.6207842854047808),\n",
+       " (7, 0.6103868347937592),\n",
+       " (8, 0.6226212619831162),\n",
+       " (9, 0.6197430316646771),\n",
+       " (100, 0.5989450003878676)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -140,56 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0.5949041608228145\n",
-      "1 0.6043529610258138\n",
-      "2 0.6211604095563139\n",
-      "3 0.6057116885084463\n",
-      "4 0.624639716207228\n",
-      "5 0.6108780451902553\n",
-      "6 0.6125588928150765\n",
-      "7 0.6047798028508614\n",
-      "8 0.6019208017259379\n",
-      "9 0.6181005908632365\n",
-      "100 0.5963337935266143\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "eval_consts_on_day(6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0.5970641452168329\n",
-      "1 0.6106876605341737\n",
-      "2 0.6156704617330806\n",
-      "3 0.6158627878328439\n",
-      "4 0.6201822004204623\n",
-      "5 0.6135455258883433\n",
-      "6 0.6149093228834406\n",
-      "7 0.6116933457756086\n",
-      "8 0.6068761722758963\n",
-      "9 0.6186008823264608\n",
-      "100 0.6017683805862568\n"
-     ]
-    }
-   ],
-   "source": [
-    "eval_consts_on_file(\"../../../data/train_pool.csv\")"
+    "eval_consts_on_file(\"../../../data/pool_with_queries/pool.json\")"
    ]
   },
   {
