Wrong greedy and adaptive data.

--- a/code/python/data_analysis/constants_eval.ipynb
+++ b/code/python/data_analysis/constants_eval.ipynb
@@ -198,6 +198,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=[(0, 0.596044782698128),\n",
+    " (1, 0.6106174336671757),\n",
+    " (2, 0.6136404037211873),\n",
+    " (3, 0.6170522967395006),\n",
+    " (4, 0.6153888909474934),\n",
+    " (5, 0.6114217399301083),\n",
+    " (6, 0.6197043088490457),\n",
+    " (7, 0.6090920466937203),\n",
+    " (8, 0.6114505704093527),\n",
+    " (9, 0.6176750192821654),\n",
+    " (100, 0.60226570943338)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Позиция 0&$0.596$\\\\\n",
+      "\\hline\n",
+      "Позиция 1&$0.6106$\\\\\n",
+      "\\hline\n",
+      "Позиция 2&$0.6136$\\\\\n",
+      "\\hline\n",
+      "Позиция 3&$0.6171$\\\\\n",
+      "\\hline\n",
+      "Позиция 4&$0.6154$\\\\\n",
+      "\\hline\n",
+      "Позиция 5&$0.6114$\\\\\n",
+      "\\hline\n",
+      "Позиция 6&$0.6197$\\\\\n",
+      "\\hline\n",
+      "Позиция 7&$0.6091$\\\\\n",
+      "\\hline\n",
+      "Позиция 8&$0.6115$\\\\\n",
+      "\\hline\n",
+      "Позиция 9&$0.6177$\\\\\n",
+      "\\hline\n",
+      "Позиция 100&$0.6023$\\\\\n",
+      "\\hline\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pos, metric in x:\n",
+    "    print(\"Позиция {}&${}$\\\\\\\\\\n\\\\hline\".format(pos, round(metric, 4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
