--- a/code/python/data_analysis/different_positions.ipynb
+++ b/code/python/data_analysis/different_positions.ipynb
@@ -28,11 +28,11 @@
    "outputs": [],
    "source": [
     "train_days_filenames = [\n",
-    "    \"../../../data/new_days_data_best_features/day_1.json\",\n",
-    "    \"../../../data/new_days_data_best_features/day_2.json\",\n",
-    "    \"../../../data/new_days_data_best_features/day_3.json\"\n",
-    "][:1]\n",
-    "test_day_filename = \"../../../data/new_days_data_best_features/day_6.json\"\n",
+    "    \"../../../data/pool_with_queries/train_test_split/day_0.json\",\n",
+    "    \"../../../data/pool_with_queries/train_test_split/day_1.json\",\n",
+    "    \"../../../data/pool_with_queries/train_test_split/day_2.json\",\n",
+    "]\n",
+    "test_day_filename = \"../../../data/new_days_data_best_features/day_3.json\"\n",
     "position_variants = list(range(10)) + [100]"
    ]
   },
@@ -66,8 +66,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 3s, sys: 2.09 s, total: 2min 5s\n",
-      "Wall time: 2min 6s\n"
+      "CPU times: user 2min 1s, sys: 1.07 s, total: 2min 2s\n",
+      "Wall time: 2min 3s\n"
      ]
     }
    ],
@@ -106,8 +106,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24.5 s, sys: 270 ms, total: 24.8 s\n",
-      "Wall time: 25 s\n"
+      "CPU times: user 18.4 s, sys: 470 ms, total: 18.8 s\n",
+      "Wall time: 19.1 s\n"
      ]
     }
    ],
@@ -163,46 +163,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0) 0.614189293846602\n",
-      "1) 0.6107913630523424\n",
-      "2) 0.6037967830750739\n",
-      "3) 0.6076002901004758\n",
-      "4) 0.6095618555931865\n",
-      "5) 0.6100069845243922\n",
-      "6) 0.6173867969481607\n",
-      "7) 0.6171057851182431\n",
-      "8) 0.6053822867981178\n",
-      "9) 0.6104277814064417\n",
-      "10) 0.6074443349091523\n",
-      "11) 0.614088492287951\n",
-      "12) 0.612556083253592\n",
-      "13) 0.6117519592404753\n",
-      "14) 0.6132826369393172\n",
-      "15) 0.6196646399335254\n",
-      "16) 0.6104560119389763\n",
-      "17) 0.604598182167581\n",
-      "18) 0.6070042056020428\n",
-      "19) 0.6175041653025443\n",
-      "20) 0.6035297191867701\n",
-      "21) 0.6074832786827826\n",
-      "22) 0.6177254855283659\n",
-      "23) 0.6061901535218691\n",
-      "24) 0.613648872279528\n",
-      "25) 0.6118181443778227\n",
-      "26) 0.6110033489246717\n",
-      "27) 0.6048440482906862\n",
-      "28) 0.5966325934582506\n",
-      "29) 0.6096928148199997\n",
-      "30) 0.6144832087130592\n",
-      "31) 0.6197909049697459\n",
-      "32) 0.6121752466995963\n",
-      "33) 0.6147492057180458\n",
-      "34) 0.6143209090996617\n",
-      "35) 0.6125103567825619\n",
-      "36) 0.6093072649741937\n",
-      "37) 0.6049345885124117\n",
-      "38) 0.6240437857279852\n",
-      "39) 0.6144364431996389\n"
+      "0) 0.6262806958670627\n",
+      "1) 0.618296227707532\n",
+      "2) 0.6105406436087526\n",
+      "3) 0.6172150476189924\n",
+      "4) 0.6157261085679079\n",
+      "5) 0.6115489200431778\n",
+      "6) 0.6176054622412227\n",
+      "7) 0.6223177921501097\n",
+      "8) 0.6187563894788184\n",
+      "9) 0.6208772712234393\n",
+      "10) 0.6250440305990581\n",
+      "11) 0.6240969430759744\n",
+      "12) 0.6200362750591157\n",
+      "13) 0.6198001927364684\n",
+      "14) 0.6247541094854008\n",
+      "15) 0.6197390589588724\n",
+      "16) 0.6183208289590205\n",
+      "17) 0.6117635055101466\n",
+      "18) 0.6299449790810546\n",
+      "19) 0.6130307547387543\n",
+      "20) 0.6184809280444624\n",
+      "21) 0.6129788461235315\n",
+      "22) 0.6204988789696351\n",
+      "23) 0.6192906784961507\n",
+      "24) 0.6257941962592725\n",
+      "25) 0.6137552826206499\n",
+      "26) 0.6273296094797842\n",
+      "27) 0.6164068615266577\n",
+      "28) 0.6163066489490218\n",
+      "29) 0.6209488607429834\n",
+      "30) 0.6223504519537457\n",
+      "31) 0.6231414068325036\n"
      ]
     },
     {
@@ -217,8 +209,8 @@
       "\u001b[0;32m~/.local/lib/python3.6/site-packages/catboost/core.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, cat_features, sample_weight, baseline, use_best_model, eval_set, verbose, logging_level, plot, column_description, verbose_eval)\u001b[0m\n\u001b[1;32m   1682\u001b[0m         \u001b[0mmodel\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mCatBoost\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1683\u001b[0m         \"\"\"\n\u001b[0;32m-> 1684\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_fit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcat_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbaseline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muse_best_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meval_set\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogging_level\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumn_description\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose_eval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1685\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1686\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/.local/lib/python3.6/site-packages/catboost/core.py\u001b[0m in \u001b[0;36m_fit\u001b[0;34m(self, X, y, cat_features, pairs, sample_weight, group_id, subgroup_id, pairs_weight, baseline, use_best_model, eval_set, verbose, logging_level, plot, column_description, verbose_eval)\u001b[0m\n\u001b[1;32m    784\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    785\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mlog_fixup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 786\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_train\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_pool\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meval_set\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_clear_pool\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    787\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcalc_feature_importance\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    788\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mallow_clear_pool\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m_catboost.pyx\u001b[0m in \u001b[0;36m_catboost._CatBoostBase._train\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m_catboost.pyx\u001b[0m in \u001b[0;36m_catboost._CatBoost._train\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m_catboost.pyx\u001b[0m in \u001b[0;36m_catboost._CatBoost._train\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m_catboost.pyx\u001b[0m in \u001b[0;36m_catboost._CatBoost._get_random_seed\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.6/json/__init__.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    300\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    301\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 302\u001b[0;31m def loads(s, *, encoding=None, cls=None, object_hook=None, parse_float=None,\n\u001b[0m\u001b[1;32m    303\u001b[0m         parse_int=None, parse_constant=None, object_pairs_hook=None, **kw):\n\u001b[1;32m    304\u001b[0m     \"\"\"Deserialize ``s`` (a ``str``, ``bytes`` or ``bytearray`` instance\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -238,7 +230,7 @@
     {
      "data": {
       "text/plain": [
-       "(40, 0.611198007637646, 0.0008367063817216818)"
+       "(32, 0.6194680589596651, 0.00084905946857444)"
       ]
      },
      "execution_count": 11,
