--- a/code/python/data_analysis/baseline.ipynb
+++ b/code/python/data_analysis/baseline.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,21 +40,20 @@
     "    args.last_feature = FEATURES_NUMBER\n",
     "    args.data_folder = \"../../../data/pool_with_queries/train_test_split/\"\n",
     "    args.out_folder = \"res\"\n",
-    "    args.type = \"classification\"\n",
+    "    args.type = \"regression\"\n",
     "    args.position_features_num = position_features_num\n",
     "    args.labels_to_substruct = None\n",
     "    args.metric_folder = \"metrics\"\n",
-    "    #args.model_constructor = lambda verbose: CatBoostRegressor(verbose=False)\n",
-    "    args.model_constructor=lambda verbose, max_clicks: CatBoostClassifier(\n",
-    "        verbose=False,\n",
-    "        loss_function='MultiClass',\n",
-    "        classes_count=max_clicks + 2\n",
-    "    )\n",
+    "    args.model_constructor = lambda verbose: CatBoostRegressor(verbose=False)\n",
+    "    #args.model_constructor=lambda verbose, max_clicks: CatBoostClassifier(\n",
+    "    #    verbose=False,\n",
+    "    #    loss_function='MultiClass',\n",
+    "    #    classes_count=max_clicks + 2\n",
+    "    #)\n",
     "    args.additional_features = None\n",
     "    args.add_base_features = True\n",
     "    args.train_days = train_days\n",
     "    args.validation_day = None\n",
-    "    args.max_clicks = max_clicks\n",
     "    args.test_days = test_days\n",
     "    \n",
     "    def clear(folder):\n",
@@ -1637,7 +1636,6 @@
     "        train_days=train_days,\n",
     "        test_days=[3],\n",
     "        position_features_num=position_features_num,\n",
-    "        max_clicks=3\n",
     "    ) for i in range(10)\n",
     "]\n",
     "prediction = np.load(\"res/train_{}_test_3.npy\".format('_'.join(map(str, train_days))))"
@@ -1663,6 +1661,87 @@
     "print('    ', np.mean(metrics))\n",
     "print('    ', np.std(metrics) / np.sqrt(10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<unknown>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/usr/lib/python3.6/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m2963\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \u001b[1;32m\"<ipython-input-9-0631b2325da1>\"\u001b[0m, line \u001b[1;32m1\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    get_ipython().run_cell_magic('time', '', 'metrics = {}\\npredictions = {}\\ntrain_days = [2]\\nposition_features_num = 1\\nmetrics = [\\n    get_baseline_metric(\\n        train_days=train_days,\\n        test_days=[3],\\n        position_features_num=position_features_num,\\n        3\\n    ) for i in range(10)\\n]\\nprediction = np.load(\"res/train_{}_test_3.npy\".format(\\'_\\'.join(map(str, train_days))))')\n",
+      "  File \u001b[1;32m\"/usr/lib/python3.6/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m2167\u001b[0m, in \u001b[1;35mrun_cell_magic\u001b[0m\n    result = fn(magic_arg_s, cell)\n",
+      "  File \u001b[1;32m\"<decorator-gen-62>\"\u001b[0m, line \u001b[1;32m2\u001b[0m, in \u001b[1;35mtime\u001b[0m\n",
+      "  File \u001b[1;32m\"/usr/lib/python3.6/site-packages/IPython/core/magic.py\"\u001b[0m, line \u001b[1;32m187\u001b[0m, in \u001b[1;35m<lambda>\u001b[0m\n    call = lambda f, *a, **k: f(*a, **k)\n",
+      "  File \u001b[1;32m\"/usr/lib/python3.6/site-packages/IPython/core/magics/execution.py\"\u001b[0m, line \u001b[1;32m1202\u001b[0m, in \u001b[1;35mtime\u001b[0m\n    expr_ast = self.shell.compile.ast_parse(expr)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/usr/lib/python3.6/site-packages/IPython/core/compilerop.py\"\u001b[0;36m, line \u001b[0;32m99\u001b[0;36m, in \u001b[0;35mast_parse\u001b[0;36m\u001b[0m\n\u001b[0;31m    return compile(source, filename, symbol, self.flags | PyCF_ONLY_AST, 1)\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<unknown>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "metrics = {}\n",
+    "predictions = {}\n",
+    "train_days = [2]\n",
+    "position_features_num = 1\n",
+    "metrics = [\n",
+    "    get_baseline_metric(\n",
+    "        train_days=train_days,\n",
+    "        test_days=[3],\n",
+    "        position_features_num=position_features_num,\n",
+    "        3\n",
+    "    ) for i in range(10)\n",
+    "]\n",
+    "prediction = np.load(\"res/train_{}_test_3.npy\".format('_'.join(map(str, train_days))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
